# mathgod

./: README.md  pubspec.yaml
.github/workflows/: build.yml
android/: keystore_base64.txt
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  giac_wrapper.cpp
android/app/src/main/cpp/giac/: .gitignore  build.gradle
android/app/src/main/cpp/giac/giac-gwt/: build.gradle
android/app/src/main/cpp/giac/giac-gwt/src/main/java/fr/grenoble/ujf/giac/: CASResources.java
android/app/src/main/cpp/giac/src/giac/cpp/: global.cc
android/app/src/main/cpp/giac/src/giac/headers/: graphtheory.h  signalprocessing.h
android/app/src/main/cpp/giac/src/jni/: giac.def
android/app/src/main/cpp/giac/src/nodegiac/: README.md
android/app/src/main/kotlin/com/example/mathgod/: MainActivity.kt
android/app/src/main/kotlin/com/mathgod/app/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/data/: theorem_database.dart
lib/engine/: giac_ffi.dart  pattern_solver.dart  solver_engine.dart  word_problem_parser.dart
lib/models/: solution.dart  theorem.dart
lib/screens/: about_screen.dart  home_screen.dart  library_screen.dart  license_screen.dart  root_screen.dart  solver_screen.dart  unsolved_screen.dart
lib/services/: license_manager.dart  secret_parts.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
